tests/test_assets/semantic/invalid/declarations/duplicate_declarations.cog
Color :: enum {
    Red,
}

Color :: enum {
    Blue,
}