tests/test_assets/semantic/invalid/declarations/duplicate_declarations.expected
semantic error at line 5: duplicate declaration 'Color'
1 semantic error generated.
